# pypatu

./: LICENSE  README.md  pyproject.toml
src/example_package_ishwest/: __main__.py  example.py
